<resources>
    <string name="app_name">Catalogue Movie Final</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="detail">Detail</string>
    <string name="share">Share</string>
    <string name="popularitas">Popularity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="now_playing">Now Playing</string>
    <string name="upcoming">Upcoming</string>
    <string name="favorite">Favorite</string>
    <string name="Shares">Share</string>
    <string name="error">Failed to load data</string>
    <string name="search">Search here</string>
    <string name="internet">Check your internet connection</string>
    <string name="home">Home</string>
    <string name="bahasa">Language</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="release_reminder">Release Reminder</string>
    <string name="addto">Added to favorite</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="noData">EMPTY</string>
    <string name="reminderSave">Reminder Saved</string>
    <string name="reminderCancel">Reminder Canceled</string>
    <string name="dailyReminderSaved">Daily Reminder Saved</string>
    <string name="dailyReminderCanceled">Daily Reminder Canceled</string>
    <string name="release_movie_message">%s Release today, check this out!</string>
    <string name="daily_reminder_message">Check what\\\'s best movie you should watch!</string>
    <string name="Empty">No Favorite Movie</string>

</resources>
