<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.fajarnandagusti.cataloguemoviefinal.activity.SettingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/bahasa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="setBahasa"
            android:padding="5dp"
            android:text="@string/bahasa"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>

    <Switch
        android:id="@+id/dailyReminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:padding="5dp"
        android:text="@string/daily_reminder"
        android:textSize="15sp"/>

    <Switch
        android:id="@+id/releaseReminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:padding="5dp"
        android:text="@string/release_reminder"
        android:textSize="15sp" />



</LinearLayout>
