<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginBottom="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="8dp"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/cv_movie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <RelativeLayout
            android:id="@+id/rel_item_movie"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:padding="8dp">

            <ImageView
                android:id="@+id/img_cv"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                tools:src="@color/colorAccent"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/movie_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignStart="@+id/movie_desc"
                android:textSize="16sp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:textStyle="bold"
                tools:text="Judul Film" />

            <TextView
                android:id="@+id/movie_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/movie_title"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_toEndOf="@+id/img_cv"
                android:maxLength="150"
                tools:text="Sinopsis" />

            <TextView
                android:id="@+id/movie_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/movie_desc"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_toEndOf="@+id/img_cv"
                android:maxLength="150"
                tools:text="Tanggal" />

            <TextView
                android:id="@+id/popularity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/movie_date"
                android:layout_below="@+id/movie_date"
                android:maxLength="150"
                android:text="@string/popularitas" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <Button
                android:id="@+id/btn_detail"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/detail"
                android:textSize="12sp"/>

            <Button
                android:id="@+id/btn_share"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/share"
                android:textSize="12sp"/>
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>